--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,11 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>core</artifactId>
+    <artifactId>robotest-core</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>ROBOTEST Core.</description>
+    <url>https://github.com/CastInfo/robotest</url>        
     <packaging>jar</packaging>
     <parent>
-        <groupId>com.castinfo.devops.robotest</groupId>
-        <artifactId>bom</artifactId>
+        <groupId>com.castinfo.devops</groupId>
+        <artifactId>robotest-bom</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
     <dependencies>
