--- a/examples-basic/pom.xml
+++ b/examples-basic/pom.xml
@@ -1,11 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>examples-basic</artifactId>
+    <artifactId>robotest-examples-basic</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>    
+    <description>ROBOTEST basic examples.</description>
+    <url>https://github.com/CastInfo/robotest</url>        
     <packaging>jar</packaging>
     <parent>
-        <groupId>com.castinfo.devops.robotest</groupId>
-        <artifactId>bom</artifactId>
+        <groupId>com.castinfo.devops</groupId>
+        <artifactId>robotest-bom</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
     <properties>
@@ -17,7 +20,7 @@
         <robotest.cfg.docker.tls>true</robotest.cfg.docker.tls>
 <!--         <robotest.cfg.docker.network>devopsnet</robotest.cfg.docker.network> -->
         <robotest.cfg.docker.public_host>192.168.99.100</robotest.cfg.docker.public_host>
-<!--         <robotest.failsafe.include.cases>com.castinfo.devops.robotest.examples.ITHelloWorld.*,</robotest.failsafe.include.cases>         -->
+        <robotest.failsafe.include.cases>com.castinfo.devops.robotest.examples.ITHelloWorld.*,</robotest.failsafe.include.cases>        
     </properties>
     <!-- If you need to rewrite properties use combine.children="merge" not use combine.children="append" or combine.self="override" 
         because parent default config properties are necesary -->
