--- a/examples-basic/pom.xml
+++ b/examples-basic/pom.xml
@@ -7,12 +7,12 @@
     <url>https://github.com/CastInfo/robotest</url>        
     <packaging>jar</packaging>
     <parent>
-        <groupId>com.castinfo.devops</groupId>
+        <groupId>com.cast-info.devops</groupId>
         <artifactId>robotest-bom</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
     <properties>
-        <!-- See parameters specified in ROBOTEST DEVELOPER OPTIONS in com.castinfo.devops.robotest.bom and overwrite default 
+        <!-- See parameters specified in ROBOTEST DEVELOPER OPTIONS in com.cast-info.devops.robotest.bom and overwrite default 
             values at your convenience -->
         <robotest.cfg.headless>false</robotest.cfg.headless>
         <robotest.cfg.browser.name>CHROME</robotest.cfg.browser.name>
